add sign up && login

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,12 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
-    "motor>=3.3.0",
+    "pydantic[email]>=2.5.0",
+    "sqlalchemy>=2.0.0",
+    "psycopg2-binary>=2.9.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-jose[cryptography]>=3.3.0",
+    "pyjwt>=2.8.0",
     "redis>=5.0.0",
     "python-docx>=1.1.0",
     "pdfplumber>=0.10.0",
@@ -41,6 +46,9 @@ question-server = "app.main:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
 
 [tool.black]
 line-length = 88
