--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,53 +1,11 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
-  postgres:
-    image: postgres:15-alpine
-    container_name: question_postgres_prod
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-question_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-question_password}
-      POSTGRES_DB: question_generator
-    volumes:
-      - postgres_data_prod:/var/lib/postgresql/data
-    networks:
-      - question_network
-    restart: always
-
-  # Redis Cache
-  redis:
-    image: redis:7-alpine
-    container_name: question_redis_prod
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data_prod:/data
-    networks:
-      - question_network
-    restart: always
-    command: redis-server --appendonly yes
-
-  # MinIO Object Storage
-  minio:
-    image: minio/minio
-    container_name: question_minio_prod
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-    volumes:
-      - minio_data_prod:/minio_data
-    command: server /minio_data --console-address ":9001"
-    networks:
-      - question_network
-    restart: always
-
   # Backend API
+  # 生产环境使用云服务：
+  # - PostgreSQL: Supabase
+  # - Redis: Upstash
+  # - File Storage: Supabase Storage
   backend:
     build:
       context: ./backend
@@ -56,17 +14,15 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-question_user}:${POSTGRES_PASSWORD:-question_password}@postgres:5432/question_generator
-      - REDIS_URL=redis://redis:6379/0
-      - MINIO_ENDPOINT=minio:9000
+      # 从 .env 文件读取云服务配置
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_KEY=${SUPABASE_KEY}
+      - SUPABASE_BUCKET=${SUPABASE_BUCKET}
       - ENVIRONMENT=production
       - JWT_SECRET=${JWT_SECRET}
-    depends_on:
-      - postgres
-      - redis
-      - minio
     volumes:
-      - ./data/uploads:/app/uploads
       - ./data/generated:/app/generated
     networks:
       - question_network
@@ -83,8 +39,6 @@ services:
     environment:
       - VITE_API_URL=/api
       - NODE_ENV=production
-    depends_on:
-      - backend
     networks:
       - question_network
     restart: always
@@ -100,17 +54,9 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./data/generated:/var/www/generated:ro
-    depends_on:
-      - backend
-      - frontend
     networks:
       - question_network
     restart: always
-
-volumes:
-  postgres_data_prod:
-  redis_data_prod:
-  minio_data_prod:
 
 networks:
   question_network:
