--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,9 +28,7 @@ dependencies = [
     "python-multipart>=0.0.6",
     "aiofiles>=23.0.0",
     "python-dotenv>=1.0.0",
-    "easyocr>=1.7.0",
-    "opencv-python>=4.8.0",
-    "numpy>=1.24.0",
+    "dashscope>=1.14.0",
     "alembic>=1.13.0",
 ]
 
