Add collections and categories management, integrate PaddleOCR and Qwen OCR configurations, and enhance UI with Neobrutalism design.

--- a/backend/.env
+++ b/backend/.env
@@ -44,3 +44,7 @@ SMTP_SERVER=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=your-email@example.com
 SMTP_PASSWORD=your-password
+
+# Qwen OCR Configuration (Alibaba Cloud DashScope)
+DASHSCOPE_API_KEY=sk-cf7028f008864ce3b4605704f51f7726
+QWEN_MODEL=qwen-vl-max
