--- a/frontend-nextjs/package.json
+++ b/frontend-nextjs/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.19.25",
