--- a/frontend-nextjs/package.json
+++ b/frontend-nextjs/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "NEXT_DISABLE_TURBOPACK=1 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -27,7 +27,7 @@
     "critters": "^0.0.25",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.2",
-    "lucide-react": "^0.553.0",
+    "lucide-react": "^0.562.0",
     "next": "^16.0.2",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
