--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.16"
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "lucide-react": "^0.562.0"
   }
 }
